--- a/about.html
+++ b/about.html
@@ -15,57 +15,70 @@
       line-height: 1.6;
     }
 
+    /* ===== Header / Navigation (MATCHES HOMEPAGE) ===== */
+    .site-header {
+      border-bottom: 1px solid #ddd;
+      background: #fff;
+    }
+
+    .header-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 16px 24px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 24px;
+      flex-wrap: wrap;
+    }
+
+    .branding {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .logo {
+      width: 48px;
+      height: auto;
+    }
+
+    .brand-text {
+      line-height: 1.2;
+    }
+
+    .site-title {
+      font-size: 18px;
+      font-weight: 700;
+    }
+
+    .site-subtitle {
+      font-size: 13px;
+      color: #555;
+    }
+
+    .main-nav a {
+      text-decoration: none;
+      color: #555;
+      margin-left: 16px;
+      font-weight: 500;
+    }
+
+    .main-nav a.active {
+      color: #8b0000;
+      font-weight: 700;
+    }
+
+    /* ===== Page Content ===== */
     .container {
       max-width: 900px;
       margin: 0 auto;
       padding: 32px 24px;
     }
 
-    /* ===== HEADER / NAV — SAME AS HOMEPAGE ===== */
-    .site-header {
-      margin-bottom: 40px;
-    }
-
-    .branding {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      margin-bottom: 12px;
-    }
-
-    .site-logo {
-      width: 64px;
-      height: auto;
-    }
-
-    .site-title h1 {
-      margin: 0;
-      font-size: 20px;
-      font-weight: 700;
-    }
-
-    .site-parent {
-      margin: 2px 0 0;
-      font-size: 14px;
-      color: #555;
-    }
-
-    .site-nav a {
-      text-decoration: none;
-      color: #555;
-      margin-right: 14px;
-      font-size: 15px;
-    }
-
-    .site-nav a.active {
-      color: #8b0000;
-      font-weight: 600;
-    }
-
-    /* ===== PAGE CONTENT ===== */
-    h2 {
-      font-size: 28px;
-      margin-top: 0;
+    h1 {
+      font-size: 32px;
+      margin-bottom: 8px;
     }
 
     .rule {
@@ -88,110 +101,99 @@
       color: #555;
     }
 
-    /* ===== MOBILE (MATCHES HOMEPAGE) ===== */
-    @media (max-width: 640px) {
-      .branding {
+    /* ===== Mobile (MATCHES OTHER PAGES — NOT CENTERED) ===== */
+    @media (max-width: 700px) {
+      .header-inner {
         flex-direction: column;
-        align-items: center;
-        text-align: center;
-        gap: 8px;
+        align-items: flex-start;
       }
 
-      .site-logo {
-        width: 72px;
+      .main-nav {
+        width: 100%;
+        text-align: left;
       }
 
-      .site-title h1 {
-        font-size: 18px;
-      }
-
-      .site-parent {
-        font-size: 13px;
-      }
-
-      .site-nav {
-        text-align: center;
-      }
-
-      .site-nav a {
-        margin: 0 8px;
-        display: inline-block;
+      .main-nav a {
+        margin-left: 0;
+        margin-right: 16px;
       }
     }
   </style>
 </head>
 
 <body>
-<div class="container">
 
-  <!-- ===== HEADER / NAV ===== -->
+  <!-- ===== Shared Header ===== -->
   <header class="site-header">
-    <div class="branding">
-      <img
-        src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
-        alt="Terry Cole Podcast Studio logo"
-        class="site-logo"
-      />
-      <div class="site-title">
-        <h1>Terry Cole Podcast Studio</h1>
-        <p class="site-parent">
-          Part of the Terry Cole Broadcast &amp; Recording Studio
-        </p>
+    <div class="header-inner">
+      <div class="branding">
+        <img
+          src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
+          alt="Terry Cole Broadcast & Recording Studio logo"
+          class="logo"
+        />
+        <div class="brand-text">
+          <div class="site-title">Terry Cole Podcast Studio</div>
+          <div class="site-subtitle">
+            Part of the Terry Cole Broadcast &amp; Recording Studio
+          </div>
+        </div>
       </div>
-    </div>
 
-    <nav class="site-nav">
-      <a href="/terrycolepodcaststudio/">Home</a>
-      <a href="/terrycolepodcaststudio/about.html" class="active">About</a>
-      <a href="/terrycolepodcaststudio/shows.html">Shows</a>
-      <a href="/terrycolepodcaststudio/contact.html">Contact</a>
-    </nav>
+      <nav class="main-nav">
+        <a href="/terrycolepodcaststudio/index.html">Home</a>
+        <a href="/terrycolepodcaststudio/about.html" class="active">About</a>
+        <a href="/terrycolepodcaststudio/shows.html">Shows</a>
+        <a href="/terrycolepodcaststudio/contact.html">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <!-- ===== PAGE CONTENT ===== -->
-  <main>
-    <h2>About the Studio</h2>
+  <!-- ===== Page Content ===== -->
+  <div class="container">
+
+    <h1>About the Studio</h1>
     <div class="rule"></div>
 
     <p>
-      The <strong>Terry Cole Podcast Studio</strong> is part of the Terry Cole Broadcast &amp;
-      Recording Studio, created to preserve, share, and continue a legacy rooted in
-      radio, storytelling, and community service.
+      The <strong>Terry Cole Podcast Studio</strong> is part of the
+      Terry Cole Broadcast &amp; Recording Studio, created to preserve,
+      share, and continue a legacy rooted in radio, storytelling,
+      and community service.
     </p>
 
     <p>
-      Named in honor of broadcaster Terry Cole, the studio serves as both an archival
-      space and a living production environment — connecting past broadcasts with new
-      voices and contemporary audio projects.
+      Named in honor of broadcaster Terry Cole, the studio serves as both
+      an archival space and a living production environment — connecting
+      past broadcasts with new voices and contemporary audio projects.
     </p>
 
     <p>
-      The Terry Cole Podcast Studio is dedicated to preserving and sharing the legacy
-      of broadcaster Terry Cole through podcasts, recorded audio projects, and archival
-      storytelling. Based in Ohio, the studio serves as a home for meaningful
-      conversations, historical audio, and voices worth remembering.
+      The Terry Cole Podcast Studio is dedicated to preserving and sharing
+      the legacy of broadcaster Terry Cole through podcasts, recorded audio
+      projects, and archival storytelling. Based in Ohio, the studio serves
+      as a home for meaningful conversations, historical audio, and voices
+      worth remembering.
     </p>
 
     <div class="callout">
-      This studio exists to ensure meaningful voices, local history, and broadcast
-      craftsmanship are preserved with care and intention — honoring the past while
-      supporting new recorded works.
+      This studio exists to ensure meaningful voices, local history,
+      and broadcast craftsmanship are preserved with care and intention —
+      honoring the past while supporting new recorded works.
     </div>
 
     <p>
-      In addition to archival work, the studio supports podcasts and recorded projects
-      from community members, institutions, and collaborators who share a commitment
-      to thoughtful, purpose-driven audio.
+      In addition to archival work, the studio supports podcasts and recorded
+      projects from community members, institutions, and collaborators who
+      share a commitment to thoughtful, purpose-driven audio.
     </p>
-  </main>
 
-  <!-- ===== FOOTER ===== -->
-  <footer>
-    <em>Broadcast legacy. Recorded with care.</em><br><br>
-    © Terry Cole Podcast Studio<br>
-    Part of the Terry Cole Broadcast &amp; Recording Studio
-  </footer>
+    <footer>
+      <em>Broadcast legacy. Recorded with care.</em><br><br>
+      © Terry Cole Podcast Studio<br>
+      Part of the Terry Cole Broadcast &amp; Recording Studio
+    </footer>
 
-</div>
+  </div>
 </body>
 </html>
