--- a/contact.html
+++ b/contact.html
@@ -18,60 +18,30 @@
     .container {
       max-width: 900px;
       margin: 0 auto;
-      padding: 32px 24px;
+      padding: 40px 24px;
     }
 
-    /* ===== HEADER (IDENTICAL TO HOMEPAGE) ===== */
-    .site-header {
-      margin-bottom: 40px;
-    }
-
-    .branding {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      margin-bottom: 12px;
-    }
-
-    .site-logo {
-      width: 64px;
-      height: auto;
-    }
-
-    .site-title h1 {
-      margin: 0;
-      font-size: 20px;
-      font-weight: 700;
-    }
-
-    .site-parent {
-      margin: 2px 0 0;
-      font-size: 14px;
-      color: #555;
-    }
-
-    /* NAV — LEFT ALIGNED */
-    .site-nav {
+    /* 🔧 FIX: force nav to match homepage (LEFT aligned) */
+    nav {
+      font-size: 0.95rem;
+      margin-bottom: 36px;
       text-align: left;
     }
 
-    .site-nav a {
+    nav a {
       text-decoration: none;
       color: #555;
-      margin-right: 14px;
-      font-size: 15px;
+      margin-right: 12px;
     }
 
-    .site-nav a.active {
+    nav a.active {
       color: #8b0000;
       font-weight: 600;
     }
 
-    /* ===== CONTENT ===== */
-    h2 {
-      font-size: 1.35rem;
-      color: #8b0000;
-      margin-top: 44px;
+    h1 {
+      font-size: 2.2rem;
+      margin-bottom: 6px;
     }
 
     .rule {
@@ -81,6 +51,12 @@
 
     p {
       max-width: 760px;
+    }
+
+    h2 {
+      font-size: 1.35rem;
+      color: #8b0000;
+      margin-top: 44px;
     }
 
     ul {
@@ -102,108 +78,65 @@
       font-size: 0.85rem;
       color: #555;
     }
-
-    /* ===== MOBILE — SAME AS HOMEPAGE ===== */
-    @media (max-width: 640px) {
-      .branding {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        gap: 8px;
-      }
-
-      .site-logo {
-        width: 72px;
-      }
-
-      .site-title h1 {
-        font-size: 18px;
-      }
-
-      .site-parent {
-        font-size: 13px;
-      }
-
-      .site-nav {
-        text-align: center;
-      }
-    }
   </style>
 </head>
 
 <body>
   <div class="container">
 
-    <!-- HEADER -->
-    <header class="site-header">
-      <div class="branding">
-        <img
-          src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
-          alt="Terry Cole Podcast Studio logo"
-          class="site-logo"
-        />
-        <div class="site-title">
-          <h1>Terry Cole Podcast Studio</h1>
-          <p class="site-parent">
-            Part of the Terry Cole Broadcast &amp; Recording Studio
-          </p>
-        </div>
-      </div>
+    <!-- Navigation -->
+    <nav>
+      <a href="/terrycolepodcaststudio/">Home</a> ·
+      <a href="/terrycolepodcaststudio/about.html">About</a> ·
+      <a href="/terrycolepodcaststudio/shows.html">Shows</a> ·
+      <a class="active" href="/terrycolepodcaststudio/contact.html">Contact</a>
+    </nav>
 
-      <nav class="site-nav">
-        <a href="/terrycolepodcaststudio/">Home</a>
-        <a href="/terrycolepodcaststudio/about.html">About</a>
-        <a href="/terrycolepodcaststudio/shows.html">Shows</a>
-        <a href="/terrycolepodcaststudio/contact.html" class="active">Contact</a>
-      </nav>
-    </header>
+    <!-- Page Header -->
+    <h1>Contact</h1>
+    <div class="rule"></div>
 
-    <!-- CONTENT -->
-    <main>
-      <h2>Contact</h2>
-      <div class="rule"></div>
+    <p>
+      The Terry Cole Podcast Studio welcomes inquiries related to its audio projects,
+      archival materials, and broadcast history.
+    </p>
 
-      <p>
-        The Terry Cole Podcast Studio welcomes inquiries related to its audio
-        projects, archival materials, and broadcast history.
-      </p>
+    <!-- Get in Touch -->
+    <h2>📬 Get in Touch</h2>
 
-      <h2>📬 Get in Touch</h2>
+    <div class="callout">
+      <strong>Website</strong><br>
+      <a href="https://terrycolepodcaststudio.com">
+        https://terrycolepodcaststudio.com
+      </a>
+      <br><br>
+      <strong>Email</strong><br>
+      <a href="mailto:bhamblin@terrycolepodcaststudio.com">
+        bhamblin@terrycolepodcaststudio.com
+      </a>
+    </div>
 
-      <div class="callout">
-        <strong>Website</strong><br>
-        <a href="https://terrycolepodcaststudio.com">
-          https://terrycolepodcaststudio.com
-        </a>
-        <br><br>
-        <strong>Email</strong><br>
-        <a href="mailto:bhamblin@terrycolepodcaststudio.com">
-          bhamblin@terrycolepodcaststudio.com
-        </a>
-      </div>
+    <!-- Submissions & Inquiries -->
+    <h2>🎙️ Submissions &amp; Inquiries</h2>
 
-      <h2>🎙️ Submissions &amp; Inquiries</h2>
+    <p>If you have:</p>
 
-      <p>If you have:</p>
+    <ul>
+      <li>Historical recordings or broadcast materials related to Terry Cole</li>
+      <li>Information supporting preservation of radio history</li>
+      <li>Questions about existing audio projects</li>
+    </ul>
 
-      <ul>
-        <li>Historical recordings or broadcast materials related to Terry Cole</li>
-        <li>Information that may support the preservation of radio history</li>
-        <li>Questions about existing audio projects</li>
-      </ul>
+    <p>Please reach out by email. All messages are reviewed.</p>
 
-      <p>
-        Please reach out by email. All messages are reviewed.
-      </p>
+    <!-- Location -->
+    <h2>📍 Location</h2>
 
-      <h2>📍 Location</h2>
+    <p>
+      The Terry Cole Podcast Studio is based in <strong>Ohio, United States</strong>.
+    </p>
 
-      <p>
-        The Terry Cole Podcast Studio is based in
-        <strong>Ohio, United States</strong>.
-      </p>
-    </main>
-
+    <!-- Footer -->
     <footer>
       <em>Broadcast legacy. Recorded with care.</em><br><br>
       © Terry Cole Podcast Studio<br>
