--- a/about.html
+++ b/about.html
@@ -12,44 +12,50 @@
       margin: 0;
       background: #ffffff;
       color: #111;
-      line-height: 1.65;
+      line-height: 1.6;
     }
 
     .container {
       max-width: 900px;
       margin: 0 auto;
-      padding: 40px 24px;
+      padding: 32px 24px;
     }
 
     /* ===== HEADER (IDENTICAL TO HOMEPAGE) ===== */
     .site-header {
-      text-align: center;
-      padding: 32px 24px 20px;
+      margin-bottom: 40px;
     }
 
-    .site-header img {
-      width: 90px;
-      height: auto;
+    .branding {
+      display: flex;
+      align-items: center;
+      gap: 16px;
       margin-bottom: 12px;
     }
 
-    .site-header h1 {
+    .site-logo {
+      width: 64px;
+      height: auto;
+    }
+
+    .site-title h1 {
       margin: 0;
-      font-size: 28px;
+      font-size: 20px;
       font-weight: 700;
     }
 
-    .site-header p {
-      margin: 6px 0 14px;
-      font-size: 15px;
+    .site-parent {
+      margin: 2px 0 0;
+      font-size: 14px;
       color: #555;
     }
 
+    /* Navigation — DO NOT CENTER */
     .site-nav a {
       text-decoration: none;
       color: #555;
-      margin: 0 10px;
-      font-size: 16px;
+      margin-right: 14px;
+      font-size: 15px;
     }
 
     .site-nav a.active {
@@ -57,93 +63,124 @@
       font-weight: 600;
     }
 
-    /* ===== PAGE CONTENT ===== */
+    /* Headings */
     h2 {
-      font-size: 2.2rem;
-      margin-bottom: 6px;
+      font-size: 28px;
+      margin-top: 0;
     }
 
     .rule {
       border-bottom: 3px solid #8b0000;
-      margin: 18px 0 32px;
-    }
-
-    p {
-      max-width: 760px;
+      margin: 12px 0 24px;
     }
 
     .callout {
+      border-left: 4px solid #8b0000;
       background: #f7f7f7;
-      border-left: 5px solid #8b0000;
-      padding: 22px 26px;
-      margin: 36px 0;
+      padding: 16px 20px;
+      margin: 32px 0;
     }
 
     footer {
-      margin-top: 70px;
+      margin-top: 60px;
       padding-top: 20px;
       border-top: 1px solid #ccc;
-      font-size: 0.85rem;
+      font-size: 14px;
       color: #555;
+    }
+
+    /* Mobile — SAME AS HOMEPAGE */
+    @media (max-width: 640px) {
+      .branding {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 8px;
+      }
+
+      .site-logo {
+        width: 72px;
+      }
+
+      .site-title h1 {
+        font-size: 18px;
+      }
+
+      .site-parent {
+        font-size: 13px;
+      }
     }
   </style>
 </head>
 
 <body>
-
-  <!-- ===== HEADER (MATCHES HOMEPAGE EXACTLY) ===== -->
-  <header class="site-header">
-    <img
-      src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
-      alt="The Terry Cole Broadcast & Recording Studio logo"
-    />
-
-    <h1>Terry Cole Podcast Studio</h1>
-    <p>Part of the Terry Cole Broadcast &amp; Recording Studio</p>
-
-    <nav class="site-nav">
-      <a href="/terrycolepodcaststudio/">Home</a>
-      <a href="/terrycolepodcaststudio/about.html" class="active">About</a>
-      <a href="/terrycolepodcaststudio/shows.html">Our Shows</a>
-      <a href="/terrycolepodcaststudio/contact.html">Contact</a>
-    </nav>
-  </header>
-
-  <!-- ===== PAGE CONTENT ===== -->
   <div class="container">
 
-    <h2>About the Studio</h2>
-    <div class="rule"></div>
+    <!-- HEADER (COPIED VERBATIM FROM HOMEPAGE) -->
+    <header class="site-header">
+      <div class="branding">
+        <img
+          src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
+          alt="Terry Cole Podcast Studio logo"
+          class="site-logo"
+        />
+        <div class="site-title">
+          <h1>Terry Cole Podcast Studio</h1>
+          <p class="site-parent">
+            Part of the Terry Cole Broadcast &amp; Recording Studio
+          </p>
+        </div>
+      </div>
 
-    <p>
-      The <strong>Terry Cole Podcast Studio</strong> is part of the Terry Cole Broadcast &amp; Recording Studio,
-      created to preserve, share, and continue a legacy rooted in radio, storytelling, and community service.
-    </p>
+      <nav class="site-nav">
+        <a href="/terrycolepodcaststudio/">Home</a>
+        <a href="/terrycolepodcaststudio/about.html" class="active">About</a>
+        <a href="/terrycolepodcaststudio/shows.html">Shows</a>
+        <a href="/terrycolepodcaststudio/contact.html">Contact</a>
+      </nav>
+    </header>
 
-    <p>
-      Named in honor of broadcaster Terry Cole, the studio serves as both an archival space and a living
-      production environment — connecting past broadcasts with new voices and contemporary audio projects.
-    </p>
+    <!-- MAIN CONTENT -->
+    <main>
+      <h2>About the Studio</h2>
+      <div class="rule"></div>
 
-    <p>
-      The Terry Cole Podcast Studio is dedicated to preserving and sharing the legacy of broadcaster Terry Cole
-      through podcasts, recorded audio projects, and archival storytelling. Based in Ohio, the studio serves as
-      a home for meaningful conversations, historical audio, and voices worth remembering.
-    </p>
+      <p>
+        The <strong>Terry Cole Podcast Studio</strong> is part of the Terry Cole
+        Broadcast &amp; Recording Studio, created to preserve, share, and continue
+        a legacy rooted in radio, storytelling, and community service.
+      </p>
 
-    <div class="callout">
-      This studio exists to ensure meaningful voices, local history, and broadcast craftsmanship are preserved
-      with care and intention — honoring the past while supporting new recorded works.
-    </div>
+      <p>
+        Named in honor of broadcaster Terry Cole, the studio serves as both an
+        archival space and a living production environment — connecting past
+        broadcasts with new voices and contemporary audio projects.
+      </p>
 
-    <p>
-      In addition to archival work, the studio supports podcasts and recorded projects from community members,
-      institutions, and collaborators who share a commitment to thoughtful, purpose-driven audio.
-    </p>
+      <p>
+        The Terry Cole Podcast Studio is dedicated to preserving and sharing the
+        legacy of broadcaster Terry Cole through podcasts, recorded audio
+        projects, and archival storytelling. Based in Ohio, the studio serves as
+        a home for meaningful conversations, historical audio, and voices worth
+        remembering.
+      </p>
 
+      <div class="callout">
+        This studio exists to ensure meaningful voices, local history, and
+        broadcast craftsmanship are preserved with care and intention — honoring
+        the past while supporting new recorded works.
+      </div>
+
+      <p>
+        In addition to archival work, the studio supports podcasts and recorded
+        projects from community members, institutions, and collaborators who
+        share a commitment to thoughtful, purpose-driven audio.
+      </p>
+    </main>
+
+    <!-- FOOTER -->
     <footer>
-      <em>Broadcast legacy. Recorded with care.</em><br><br>
-      © Terry Cole Podcast Studio<br>
+      © Terry Cole Podcast Studio<br />
       Part of the Terry Cole Broadcast &amp; Recording Studio
     </footer>
 
