--- a/shows.html
+++ b/shows.html
@@ -21,7 +21,7 @@
       padding: 32px 24px;
     }
 
-    /* ===== HEADER / NAV — SAME AS HOMEPAGE ===== */
+    /* ===== HEADER (COPIED VERBATIM FROM HOMEPAGE) ===== */
     .site-header {
       margin-bottom: 40px;
     }
@@ -50,6 +50,7 @@
       color: #555;
     }
 
+    /* Navigation — LEFT ALIGNED */
     .site-nav a {
       text-decoration: none;
       color: #555;
@@ -64,8 +65,8 @@
 
     /* ===== PAGE CONTENT ===== */
     h2 {
-      font-size: 2.2rem;
-      margin-bottom: 6px;
+      font-size: 28px;
+      margin-top: 0;
     }
 
     .rule {
@@ -107,7 +108,7 @@
       color: #555;
     }
 
-    /* ===== MOBILE ===== */
+    /* ===== MOBILE (SAME AS HOMEPAGE) ===== */
     @media (max-width: 640px) {
       .branding {
         flex-direction: column;
@@ -134,7 +135,7 @@
 <body>
 <div class="container">
 
-  <!-- ===== HEADER / NAV ===== -->
+  <!-- ===== HEADER (EXACT MATCH) ===== -->
   <header class="site-header">
     <div class="branding">
       <img
@@ -158,19 +159,19 @@
     </nav>
   </header>
 
-  <!-- ===== PAGE CONTENT ===== -->
+  <!-- ===== MAIN CONTENT ===== -->
   <main>
     <h2>Shows &amp; Audio Projects</h2>
     <div class="rule"></div>
 
     <p>
-      The Terry Cole Podcast Studio is home to podcasts and recorded audio projects produced by the
-      Terry Cole Broadcast &amp; Recording Studio.
+      The Terry Cole Podcast Studio is home to podcasts and recorded audio projects
+      produced by the Terry Cole Broadcast &amp; Recording Studio.
     </p>
 
     <p>
-      All programs are officially hosted on <strong>Spreaker (from iHeart)</strong> and are presented
-      here for direct listening.
+      All programs are officially hosted on <strong>Spreaker (from iHeart)</strong>
+      and are presented here for direct listening.
     </p>
 
     <div class="show">
