--- a/contact.html
+++ b/contact.html
@@ -18,30 +18,54 @@
     .container {
       max-width: 900px;
       margin: 0 auto;
-      padding: 40px 24px;
+      padding: 32px 24px;
     }
 
-    /* 🔧 FIX: force nav to match homepage (LEFT aligned) */
-    nav {
-      font-size: 0.95rem;
-      margin-bottom: 36px;
-      text-align: left;
+    /* ===== HEADER (COPIED EXACTLY FROM HOMEPAGE) ===== */
+    .site-header {
+      margin-bottom: 40px;
     }
 
-    nav a {
+    .branding {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      margin-bottom: 12px;
+    }
+
+    .site-logo {
+      width: 64px;
+      height: auto;
+    }
+
+    .site-title h1 {
+      margin: 0;
+      font-size: 20px;
+      font-weight: 700;
+    }
+
+    .site-parent {
+      margin: 2px 0 0;
+      font-size: 14px;
+      color: #555;
+    }
+
+    .site-nav a {
       text-decoration: none;
       color: #555;
-      margin-right: 12px;
+      margin-right: 14px;
+      font-size: 15px;
     }
 
-    nav a.active {
+    .site-nav a.active {
       color: #8b0000;
       font-weight: 600;
     }
 
-    h1 {
-      font-size: 2.2rem;
-      margin-bottom: 6px;
+    /* ===== PAGE CONTENT ===== */
+    h2 {
+      font-size: 28px;
+      margin-top: 0;
     }
 
     .rule {
@@ -53,7 +77,7 @@
       max-width: 760px;
     }
 
-    h2 {
+    h3 {
       font-size: 1.35rem;
       color: #8b0000;
       margin-top: 44px;
@@ -78,22 +102,61 @@
       font-size: 0.85rem;
       color: #555;
     }
+
+    /* ===== MOBILE (SAME AS HOMEPAGE) ===== */
+    @media (max-width: 640px) {
+      .branding {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 8px;
+      }
+
+      .site-logo {
+        width: 72px;
+      }
+
+      .site-title h1 {
+        font-size: 18px;
+      }
+
+      .site-parent {
+        font-size: 13px;
+      }
+    }
   </style>
 </head>
 
 <body>
-  <div class="container">
+<div class="container">
 
-    <!-- Navigation -->
-    <nav>
-      <a href="/terrycolepodcaststudio/">Home</a> ·
-      <a href="/terrycolepodcaststudio/about.html">About</a> ·
-      <a href="/terrycolepodcaststudio/shows.html">Shows</a> ·
-      <a class="active" href="/terrycolepodcaststudio/contact.html">Contact</a>
+  <!-- ===== HEADER (EXACT MATCH TO HOMEPAGE) ===== -->
+  <header class="site-header">
+    <div class="branding">
+      <img
+        src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
+        alt="Terry Cole Podcast Studio logo"
+        class="site-logo"
+      />
+      <div class="site-title">
+        <h1>Terry Cole Podcast Studio</h1>
+        <p class="site-parent">
+          Part of the Terry Cole Broadcast &amp; Recording Studio
+        </p>
+      </div>
+    </div>
+
+    <nav class="site-nav">
+      <a href="/terrycolepodcaststudio/">Home</a>
+      <a href="/terrycolepodcaststudio/about.html">About</a>
+      <a href="/terrycolepodcaststudio/shows.html">Shows</a>
+      <a href="/terrycolepodcaststudio/contact.html" class="active">Contact</a>
     </nav>
+  </header>
 
-    <!-- Page Header -->
-    <h1>Contact</h1>
+  <!-- ===== MAIN CONTENT ===== -->
+  <main>
+    <h2>Contact</h2>
     <div class="rule"></div>
 
     <p>
@@ -101,8 +164,7 @@
       archival materials, and broadcast history.
     </p>
 
-    <!-- Get in Touch -->
-    <h2>📬 Get in Touch</h2>
+    <h3>📬 Get in Touch</h3>
 
     <div class="callout">
       <strong>Website</strong><br>
@@ -116,11 +178,9 @@
       </a>
     </div>
 
-    <!-- Submissions & Inquiries -->
-    <h2>🎙️ Submissions &amp; Inquiries</h2>
+    <h3>🎙️ Submissions &amp; Inquiries</h3>
 
     <p>If you have:</p>
-
     <ul>
       <li>Historical recordings or broadcast materials related to Terry Cole</li>
       <li>Information supporting preservation of radio history</li>
@@ -129,20 +189,19 @@
 
     <p>Please reach out by email. All messages are reviewed.</p>
 
-    <!-- Location -->
-    <h2>📍 Location</h2>
-
+    <h3>📍 Location</h3>
     <p>
       The Terry Cole Podcast Studio is based in <strong>Ohio, United States</strong>.
     </p>
+  </main>
 
-    <!-- Footer -->
-    <footer>
-      <em>Broadcast legacy. Recorded with care.</em><br><br>
-      © Terry Cole Podcast Studio<br>
-      Part of the Terry Cole Broadcast &amp; Recording Studio
-    </footer>
+  <!-- ===== FOOTER ===== -->
+  <footer>
+    <em>Broadcast legacy. Recorded with care.</em><br><br>
+    © Terry Cole Podcast Studio<br>
+    Part of the Terry Cole Broadcast &amp; Recording Studio
+  </footer>
 
-  </div>
+</div>
 </body>
 </html>
