--- a/index.html
+++ b/index.html
@@ -193,9 +193,20 @@
 
     <!-- Footer -->
     <footer>
-      © Terry Cole Podcast Studio<br />
-      Part of the Terry Cole Broadcast &amp; Recording Studio
-    </footer>
+  <em>Broadcast legacy. Recorded with care.</em><br><br>
+
+  <p>
+    Studio updates and related materials are occasionally shared on
+    <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
+      Facebook
+    </a>.
+  </p>
+
+  <p>
+    © Terry Cole Podcast Studio<br>
+    Part of the Terry Cole Broadcast &amp; Recording Studio
+  </p>
+</footer>
 
   </div>
 </body>
