--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
 
     <!-- Footer -->
     <footer>
-  <em>Broadcast legacy. Recorded with care.</em><br><br>
   <p>
-    Studio updates and related materials are occasionally shared on
-    <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
-      Facebook
-    </a>.
-  </p>
+  <em>Broadcast legacy. Recorded with care.</em><br>
+  Studio updates and related materials are occasionally shared on
+  <a href="https://www.facebook.com/YOURPAGE" target="_blank" rel="noopener">
+    Facebook
+  </a>.
+</p>
 
   <p>
     © Terry Cole Podcast Studio<br>
