--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   <p>
   <em>Broadcast legacy. Recorded with care.</em><br>
   Studio updates and related materials are occasionally shared on
-  <a href="https://www.facebook.com/YOURPAGE" target="_blank" rel="noopener">
+  <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
     Facebook
   </a>.
 </p>
