--- a/about.html
+++ b/about.html
@@ -178,11 +178,21 @@
       </p>
     </main>
 
-    <!-- FOOTER -->
+    <!-- Footer -->
     <footer>
-      © Terry Cole Podcast Studio<br />
-      Part of the Terry Cole Broadcast &amp; Recording Studio
-    </footer>
+  <p>
+  <em>Broadcast legacy. Recorded with care.</em><br>
+  Studio updates and related materials are occasionally shared on
+  <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
+    Facebook
+  </a>.
+</p>
+
+  <p>
+    © Terry Cole Podcast Studio<br>
+    Part of the Terry Cole Broadcast &amp; Recording Studio
+  </p>
+</footer>
 
   </div>
 </body>
