--- a/contact.html
+++ b/contact.html
@@ -195,13 +195,22 @@
     </p>
   </main>
 
-  <!-- ===== FOOTER ===== -->
-  <footer>
-    <em>Broadcast legacy. Recorded with care.</em><br><br>
+  <!-- Footer -->
+    <footer>
+  <p>
+  <em>Broadcast legacy. Recorded with care.</em><br>
+  Studio updates and related materials are occasionally shared on
+  <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
+    Facebook
+  </a>.
+</p>
+
+  <p>
     © Terry Cole Podcast Studio<br>
     Part of the Terry Cole Broadcast &amp; Recording Studio
-  </footer>
+  </p>
+</footer>
 
-</div>
+  </div>
 </body>
 </html>
