--- a/shows.html
+++ b/shows.html
@@ -21,7 +21,7 @@
       padding: 32px 24px;
     }
 
-    /* ===== HEADER (COPIED VERBATIM FROM HOMEPAGE) ===== */
+    /* ===== HEADER (EXACT FROM HOMEPAGE) ===== */
     .site-header {
       margin-bottom: 40px;
     }
@@ -50,7 +50,6 @@
       color: #555;
     }
 
-    /* Navigation — LEFT ALIGNED */
     .site-nav a {
       text-decoration: none;
       color: #555;
@@ -84,8 +83,23 @@
 
     .show h3 {
       color: #8b0000;
-      margin-bottom: 10px;
+      margin-bottom: 6px;
       font-size: 1.35rem;
+    }
+
+    .listen-links {
+      font-size: 14px;
+      margin-bottom: 10px;
+    }
+
+    .listen-links a {
+      color: #555;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .listen-links a:hover {
+      text-decoration: underline;
     }
 
     iframe {
@@ -108,7 +122,7 @@
       color: #555;
     }
 
-    /* ===== MOBILE (SAME AS HOMEPAGE) ===== */
+    /* ===== MOBILE ===== */
     @media (max-width: 640px) {
       .branding {
         flex-direction: column;
@@ -135,7 +149,7 @@
 <body>
 <div class="container">
 
-  <!-- ===== HEADER (EXACT MATCH) ===== -->
+  <!-- ===== HEADER ===== -->
   <header class="site-header">
     <div class="branding">
       <img
@@ -165,42 +179,73 @@
     <div class="rule"></div>
 
     <p>
-      The Terry Cole Podcast Studio is home to podcasts and recorded audio projects
-      produced by the Terry Cole Broadcast &amp; Recording Studio.
-    </p>
-
-    <p>
       All programs are officially hosted on <strong>Spreaker (from iHeart)</strong>
       and are presented here for direct listening.
     </p>
 
+    <!-- Terry Cole’s Audio Archives -->
     <div class="show">
       <h3>🎙️ Terry Cole’s Audio Archives</h3>
-      <p>Preserved broadcasts and historical audio recordings connected to Terry Cole’s career in radio.</p>
-      <iframe src="https://widget.spreaker.com/player?show_id=5365299&theme=light&playlist=show&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true" width="100%" height="350"></iframe>
+      <div class="listen-links">
+        <a href="https://www.iheart.com/podcast/53-terry-coles-audio-archives-102630732" target="_blank" rel="noopener">
+          Listen on iHeart
+        </a>
+        — &nbsp;
+        <a href="https://widget.spreaker.com/player?show_id=5365299" target="_blank" rel="noopener">
+          Open Spreaker Player
+        </a>
+      </div>
+      <iframe src="https://widget.spreaker.com/player?show_id=5365299&theme=light&playlist=show&hide-logo=true" width="100%" height="350"></iframe>
     </div>
 
+    <!-- OSSB Inside and Out -->
     <div class="show">
       <h3>🎧 OSSB Inside and Out</h3>
-      <p>A podcast exploring the people, stories, and community of the Ohio State School for the Blind.</p>
+      <div class="listen-links">
+        <a href="https://www.iheart.com/podcast/1248-ossb-inside-and-out-54604516" target="_blank" rel="noopener">
+          Listen on iHeart
+        </a>
+        — &nbsp;
+        <a href="https://widget.spreaker.com/player?show_id=4120454" target="_blank" rel="noopener">
+          Open Spreaker Player
+        </a>
+      </div>
       <iframe src="https://widget.spreaker.com/player?show_id=4120454&theme=light&playlist=show&hide-logo=true" width="100%" height="350"></iframe>
     </div>
 
+    <!-- Brendon Hamblin’s Audio Projects -->
     <div class="show">
       <h3>🎚️ Brendon Hamblin’s Audio Projects</h3>
-      <p>Independent audio projects, recordings, and special productions.</p>
       <iframe src="https://widget.spreaker.com/player?show_id=4664315&theme=light&playlist=show&hide-logo=true" width="100%" height="350"></iframe>
     </div>
 
+    <!-- Andy & Steph’s Top Ten Podcast -->
     <div class="show">
       <h3>🎤 Andy &amp; Steph’s Top Ten Podcast</h3>
-      <p>A conversational podcast covering favorites, rankings, and pop culture topics.</p>
+      <div class="listen-links">
+        <a href="https://www.iheart.com/podcast/53-andy-stephs-top-ten-podcast-85580398" target="_blank" rel="noopener">
+          Listen on iHeart
+        </a>
+        — &nbsp;
+        <a href="https://widget.spreaker.com/player?show_id=5020228" target="_blank" rel="noopener">
+          Open Spreaker Player
+        </a>
+      </div>
       <iframe src="https://widget.spreaker.com/player?show_id=5020228&theme=light&playlist=show&hide-logo=true" width="100%" height="350"></iframe>
     </div>
 
+    <!-- The Andy & Brendon Podcast -->
     <div class="show">
       <h3>🎙️ The Andy &amp; Brendon Podcast</h3>
-      <p>Conversations, commentary, and collaborative discussions.</p>
+      <div class="listen-links">
+        <a href="https://iheart.com/podcast/74317125" target="_blank" rel="noopener">
+          Listen on iHeart
+        </a>
+        — &nbsp;
+        <a href="https://widget.spreaker.com/player?show_id=4580634" target="_blank" rel="noopener">
+          Open Spreaker Player
+        </a>
+      </div>
       <iframe src="https://widget.spreaker.com/player?show_id=4580634&theme=light&playlist=show&hide-logo=true" width="100%" height="350"></iframe>
     </div>
 
@@ -214,22 +259,22 @@
     </div>
   </main>
 
-  <!-- Footer -->
-    <footer>
-  <p>
-  <em>Broadcast legacy. Recorded with care.</em><br>
-  Studio updates and related materials are occasionally shared on
-  <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
-    Facebook
-  </a>.
-</p>
+  <!-- ===== FOOTER ===== -->
+  <footer>
+    <p>
+      <em>Broadcast legacy. Recorded with care.</em><br>
+      Studio updates and related materials are occasionally shared on
+      <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
+        Facebook
+      </a>.
+    </p>
 
-  <p>
-    © Terry Cole Podcast Studio<br>
-    Part of the Terry Cole Broadcast &amp; Recording Studio
-  </p>
-</footer>
+    <p>
+      © Terry Cole Podcast Studio<br>
+      Part of the Terry Cole Broadcast &amp; Recording Studio
+    </p>
+  </footer>
 
-  </div>
+</div>
 </body>
 </html>
