--- a/shows.html
+++ b/shows.html
@@ -21,7 +21,7 @@
       padding: 32px 24px;
     }
 
-    /* ===== HEADER (EXACT FROM HOMEPAGE) ===== */
+    /* ===== HEADER (EXACT HOMEPAGE COPY) ===== */
     .site-header {
       margin-bottom: 40px;
     }
@@ -62,7 +62,7 @@
       font-weight: 600;
     }
 
-    /* ===== PAGE CONTENT ===== */
+    /* ===== CONTENT ===== */
     h2 {
       font-size: 28px;
       margin-top: 0;
@@ -88,22 +88,18 @@
     }
 
     .listen-links {
-      font-size: 14px;
-      margin-bottom: 10px;
+      margin: 6px 0 12px;
+      font-size: 0.9rem;
     }
 
     .listen-links a {
-      color: #555;
+      color: #8b0000;
       text-decoration: none;
-      font-weight: 500;
-    }
-
-    .listen-links a:hover {
-      text-decoration: underline;
+      font-weight: 600;
     }
 
     iframe {
-      margin-top: 14px;
+      margin-top: 12px;
       border: none;
     }
 
@@ -173,80 +169,67 @@
     </nav>
   </header>
 
-  <!-- ===== MAIN CONTENT ===== -->
+  <!-- ===== MAIN ===== -->
   <main>
     <h2>Shows &amp; Audio Projects</h2>
     <div class="rule"></div>
 
     <p>
-      All programs are officially hosted on <strong>Spreaker (from iHeart)</strong>
-      and are presented here for direct listening.
+      The Terry Cole Podcast Studio is home to podcasts and recorded audio projects
+      produced by the Terry Cole Broadcast &amp; Recording Studio.
     </p>
 
-    <!-- Terry Cole’s Audio Archives -->
+    <p>
+      All programs are officially hosted on <strong>iHeart</strong> and are presented
+      here for direct listening.
+    </p>
+
+    <!-- SHOWS -->
+
     <div class="show">
       <h3>🎙️ Terry Cole’s Audio Archives</h3>
       <div class="listen-links">
-        <a href="https://www.iheart.com/podcast/53-terry-coles-audio-archives-102630732" target="_blank" rel="noopener">
-          Listen on iHeart
-        </a>
-        — &nbsp;
-        <a href="https://widget.spreaker.com/player?show_id=5365299" target="_blank" rel="noopener">
-          Open Spreaker Player
-        </a>
+        <a href="https://www.iheart.com/podcast/53-terry-coles-audio-archives-102630732"
+           target="_blank" rel="noopener">Listen on iHeart</a>
       </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=5365299&theme=light&playlist=show&hide-logo=true" width="100%" height="350"></iframe>
+      <iframe src="https://widget.spreaker.com/player?show_id=5365299&theme=light&playlist=show&hide-logo=true"
+              width="100%" height="350"></iframe>
     </div>
 
-    <!-- OSSB Inside and Out -->
     <div class="show">
       <h3>🎧 OSSB Inside and Out</h3>
       <div class="listen-links">
-        <a href="https://www.iheart.com/podcast/1248-ossb-inside-and-out-54604516" target="_blank" rel="noopener">
-          Listen on iHeart
-        </a>
-        — &nbsp;
-        <a href="https://widget.spreaker.com/player?show_id=4120454" target="_blank" rel="noopener">
-          Open Spreaker Player
-        </a>
+        <a href="https://www.iheart.com/podcast/1248-ossb-inside-and-out-54604516"
+           target="_blank" rel="noopener">Listen on iHeart</a>
       </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=4120454&theme=light&playlist=show&hide-logo=true" width="100%" height="350"></iframe>
+      <iframe src="https://widget.spreaker.com/player?show_id=4120454&theme=light&playlist=show&hide-logo=true"
+              width="100%" height="350"></iframe>
     </div>
 
-    <!-- Brendon Hamblin’s Audio Projects -->
     <div class="show">
       <h3>🎚️ Brendon Hamblin’s Audio Projects</h3>
-      <iframe src="https://widget.spreaker.com/player?show_id=4664315&theme=light&playlist=show&hide-logo=true" width="100%" height="350"></iframe>
+      <iframe src="https://widget.spreaker.com/player?show_id=4664315&theme=light&playlist=show&hide-logo=true"
+              width="100%" height="350"></iframe>
     </div>
 
-    <!-- Andy & Steph’s Top Ten Podcast -->
     <div class="show">
       <h3>🎤 Andy &amp; Steph’s Top Ten Podcast</h3>
       <div class="listen-links">
-        <a href="https://www.iheart.com/podcast/53-andy-stephs-top-ten-podcast-85580398" target="_blank" rel="noopener">
-          Listen on iHeart
-        </a>
-        — &nbsp;
-        <a href="https://widget.spreaker.com/player?show_id=5020228" target="_blank" rel="noopener">
-          Open Spreaker Player
-        </a>
+        <a href="https://www.iheart.com/podcast/53-andy-stephs-top-ten-podcast-85580398"
+           target="_blank" rel="noopener">Listen on iHeart</a>
       </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=5020228&theme=light&playlist=show&hide-logo=true" width="100%" height="350"></iframe>
+      <iframe src="https://widget.spreaker.com/player?show_id=5020228&theme=light&playlist=show&hide-logo=true"
+              width="100%" height="350"></iframe>
     </div>
 
-    <!-- The Andy & Brendon Podcast -->
     <div class="show">
       <h3>🎙️ The Andy &amp; Brendon Podcast</h3>
       <div class="listen-links">
-        <a href="https://iheart.com/podcast/74317125" target="_blank" rel="noopener">
-          Listen on iHeart
-        </a>
-        — &nbsp;
-        <a href="https://widget.spreaker.com/player?show_id=4580634" target="_blank" rel="noopener">
-          Open Spreaker Player
-        </a>
+        <a href="https://iheart.com/podcast/74317125"
+           target="_blank" rel="noopener">Listen on iHeart</a>
       </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=4580634&theme=light&playlist=show&hide-logo=true" width="100%" height="350"></iframe>
+      <iframe src="https://widget.spreaker.com/player?show_id=4580634&theme=light&playlist=show&hide-logo=true"
+              width="100%" height="350"></iframe>
     </div>
 
     <div class="about-playback">
@@ -264,9 +247,8 @@
     <p>
       <em>Broadcast legacy. Recorded with care.</em><br>
       Studio updates and related materials are occasionally shared on
-      <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
-        Facebook
-      </a>.
+      <a href="https://www.facebook.com/TerryColePodcastStudio"
+         target="_blank" rel="noopener">Facebook</a>.
     </p>
 
     <p>
